--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,7 @@ services:
     command: npm run start:dev
     depends_on:
       - task-db
+      - redis
     networks:
       - backend
 
@@ -28,6 +29,14 @@ services:
       - .development.env
     ports:
       - "5432:5432"
+    networks:
+      - backend
+
+  redis:
+    container_name: redis
+    image: "redis:latest"
+    ports:
+      - 6379:6379
     networks:
       - backend
 
