--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "cache-manager": "^5.4.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "ioredis": "^5.3.2",
     "nest-commander": "^3.12.5",
     "pg": "^8.11.3",
     "reflect-metadata": "^0.1.13",
